# Malloc-C

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README  README.md  example.c  memory_test.c  nu_malloc.c  nu_malloc.h  test_example.sh  test_memory.sh
.github/workflows/: ci.yml
include/: nu_malloc.h
src/: example.c  nu_malloc.c
tests/: memory_test.c  test_example.sh  test_memory.sh
